# medichat-rd

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LOCAL_DEPLOY.md  MEMORY.md  PRIVACY_POLICY.md  README.md  TEAM.md  _config.yml  add_narration.py  demo_script.json  demo_server.py  docker-compose.yml  index.html  index.md  optimized_server.py  record_demo.py  requirements.txt  server.py  start.sh
agents/: deeprare_orchestrator.py  doctor_agent.py  doctor_profiles.py  drug_repurposing_agent.py  drug_repurposing_optimizer.py  drug_target_network.py  enhanced_drug_repurposing_agent.py  enhanced_repurposing_agent.py  genomic_analyzer.py  hallucination_guard.py  hpo_extractor.py  hpo_ontology.py  knowledge_graph.py  knowledge_retriever.py  lab_analyzer.py  medical_agents.py  medical_nlp.py  mimo_research_agent.py  openevidence_engine.py  orchestrator.py  patient_history.py  patient_matcher.py  patient_registry.py  rare_disease_agent.py  report_generator.py  virtual_screening_agent.py
assets/: index-B11sbPs3.js  index-B1dWEJqE.css  index-BaeRox5Y.js  index-CiUAvvWB.js  index-DXFEn2QO.css  index-sz2eZ6qn.css
backend/: .env.example  Dockerfile  a2a_orchestrator.py  analytics_api.py  avatar_core.py  avatar_providers.py  avatar_runtime_api.py  avatar_service.py  cache_manager.py  claim_verifier.py  clinical_trials.py  community_api.py  crawler_service.py  database_models.py  decision_checkpoint.py  deeprare_api.py  doctor_api.py  hipaa_compliance.py  hospital_recommender.py  knowledge_api.py  main.py  (+26 more)
scientific-runtime/: README.md  pyproject.toml
(+147 files in other folders)
