[project]
name = "medichat-rd-scientific-runtime"
version = "0.1.0"
description = "Dedicated Python 3.12 + uv scientific execution layer for MediChat-RD."
requires-python = ">=3.12,<3.13"
dependencies = [
  "httpx>=0.28.1",
  "networkx>=3.4.2",
  "numpy>=2.2.6",
  "pandas>=2.2.3",
  "pydantic>=2.11.10",
  "python-dotenv>=1.1.0",
  "pyyaml>=6.0.3",
  "rich>=14.3.0",
  "typer>=0.24.1",
]

[project.optional-dependencies]
chem = [
  "medchem>=2.0.0",
  "rdkit>=2024.9.6",
]
clinical = [
  "lifelines>=0.30.0",
  "polars>=1.35.2",
  "pyarrow>=22.0.0",
  "pyhealth>=1.1.6",
  "scikit-learn>=1.7.2",
  "scipy>=1.17.1",
  "statsmodels>=0.14.4",
]
docs = [
  "jupyterlab>=4.4.1",
  "matplotlib>=3.10.1",
  "plotly>=6.0.1",
  "pymupdf>=1.25.5",
  "python-docx>=1.1.2",
  "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
